fix: Total funcionality without being deployed. Style: Minor fixes to Document. Title displays correctly if wraps.

--- a/src/pages/document/Documents.css
+++ b/src/pages/document/Documents.css
@@ -1,12 +1,15 @@
 .bg {
-    background-color: var(--ion-color-primary);
+    background-color: var(--novus-article-background);
 }
 
 .title__document{
     color: var(--ion-color-primary-contrast);
     text-transform: uppercase;
     font-size: medium;
+    font-weight: bold;
     font-family:system-ui;
+    word-wrap: break-word;
+    margin-inline: auto;
 }
 .imageArticle{
     border-radius: 20px;
@@ -16,16 +19,14 @@
     color: var(--ion-color-primary-contrast);
     font-size: medium;
     font-family:sans-serif;
-    padding-left: 1.5em;
     white-space: normal;
     line-height: 1em;
     word-wrap: break-word;
-    word-break: break-all;
    
 }
 
 .content-row {
     text-align: center;
     text-align: justify;
-    margin: 1em;
+    margin-inline: 1rem;
 }
